--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-ansible==4.5.0
+#ansible==4.5.0
 # required for AWX
 ansible-runner==2.0.2
 # required for ansible k8s module
-kubernetes==18.20.0
+#kubernetes==18.20.0
 # required for ansible parsing json
 jmespath==0.10.0
 # required for ansible hashicorp consul lookup
 python-consul2==0.1.5
 # required for ansible hashicorp vault lookup
 hvac==0.11.0
+
+ansible==2.9.9
+openshift==0.11.2
+# Required for json filter
+# jmespath==0.10.0
+# Required for sso.jks creation
+pyjks==18.0.0
+pyOpenSSL==19.0.0
+colorama==0.4.1
