updating packages used

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-ansible==4.5.0
+ansible==4.7.0
 # required for AWX
-ansible-runner==2.0.2
+ansible-runner==2.0.3
 # required for ansible k8s module
-kubernetes==18.20.0
+kubernetes==19.15.0
 # required for ansible parsing json
 jmespath==0.10.0
+# required for aws modules
+boto3==1.19.6
 # required for ansible hashicorp consul lookup
 python-consul2==0.1.5
 # required for ansible hashicorp vault lookup
-hvac==0.11.0
+hvac==0.11.2
